crates/apollo-compiler/test_data/diagnostics/0044_union_member_not_of_object_type.txt
Error: union member `Pet` must be an object type
    ╭─[0044_union_member_not_of_object_type.graphql:17:24]
    │
 17 │ union CatOrDog = Cat | Pet
    │                        ─┬─  
    │                         ╰─── this is an interface
    │ 
    │ Help: Union members must be object types.
────╯

